// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem> renders the operation selector if a service is selected 1`] = `
<header
  className="DdgHeader"
>
  <div
    className="DdgHeader--paramsHeader"
  >
    <NameSelector
      label="Service:"
      options={
        Array [
          "A. K. (Alexander Keewatin) Dewdney, Canadian mathematician, computer scientist, author and filmmaker. ",
          "A. P. J. Abdul Kalam - is an Indian scientist aka Missile ",
          "Aaron Swartz was influential in creating RSS, Markdown, Creative Commons, Reddit, and ",
          "Ada Lovelace invented the first algorithm. https://en.wikipedia.org/wiki/Ada_Lovelace (thanks James ",
          "Ada Yonath - an Israeli crystallographer, the first woman from the Middle ",
          "Adele Goldberg, was one of the designers and developers of the Smalltalk ",
          "Adele Goldstine, born Adele Katz, wrote the complete technical description for the ",
          "Adi Shamir - Israeli cryptographer whose numerous inventions and contributions to cryptography ",
          "Agnes Meyer Driscoll - American cryptanalyst during World Wars I and II ",
          "Alan Turing was a founding father of computer science. ",
          "Albert Einstein invented the general theory of relativity. ",
          "Alexander Graham Bell - an eminent Scottish-born scientist, inventor, engineer and innovator ",
          "Alexander Grothendieck - German-born French mathematician who became a leading figure in ",
          "Alexandra Asanovna Elbakyan (Russian: Алекса́ндра Аса́новна Элбакя́н) is a Kazakhstani graduate student, ",
          "Alfred Nobel - a Swedish chemist, engineer, innovator, and armaments manufacturer (inventor ",
          "Ambroise Pare invented modern surgery. ",
          "Andrew Wiles - Notable British mathematician who proved the enigmatic Fermat's Last ",
          "Anita Borg - Anita Borg was the founding director of the Institute ",
          "Anne Laura Dorinthea McLaren - British developmental biologist whose work helped lead ",
          "Annie Easley - She was a leading member of the team which ",
          "Annie Jump Cannon - pioneering female astronomer who classified hundreds of thousands ",
          "Archimedes was a physicist, engineer and mathematician who invented too many things ",
          "Aryabhata - Ancient Indian mathematician-astronomer during 476-550 CE ",
          "Asima Chatterjee was an Indian organic chemist noted for her research on ",
          "Auguste and Louis Lumière - the first filmmakers in history - ",
          "Bailey Whitfield Diffie - American cryptographer and one of the pioneers of ",
          "Barbara Liskov - co-developed the Liskov substitution principle. Liskov was also the ",
          "Barbara McClintock - a distinguished American cytogeneticist, 1983 Nobel Laureate in Physiology ",
          "Benjamin Franklin is famous for his experiments in electricity and the invention ",
          "Bertha Swirles was a theoretical physicist who made a number of contributions ",
          "Betty Jennings - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Betty Snyder - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Bhaskara II - Ancient Indian mathematician-astronomer whose work on calculus predates Newton ",
          "Blaise Pascal, French mathematician, physicist, and inventor - ",
          "Brahmagupta - Ancient Indian mathematician during 598-670 CE who gave rules to ",
          "Bram Cohen - American computer programmer and author of the BitTorrent peer-to-peer ",
          "Buckaroo Banzai and his mentor Dr. Hikita perfectd the \\"oscillation overthruster\\", a ",
          "C. V. Raman - Indian physicist who won the Nobel Prize in ",
          "Carla Meninsky, was the game designer and programmer for Atari 2600 games ",
          "Carol Shaw - Originally an Atari employee, Carol Shaw is said to ",
          "Caroline Harriet Haslett - English electrical engineer, electricity industry administrator and champion ",
          "Caroline Lucretia Herschel - German astronomer and discoverer of several comets. ",
          "Carolyn Widney Greider - American molecular biologist and joint winner of the ",
          "Cecilia Payne-Gaposchkin was an astronomer and astrophysicist who, in 1925, proposed in ",
          "Charles Babbage invented the concept of a programmable computer. ",
          "Charles Darwin established the principles of natural evolution. ",
          "Chien-Shiung Wu - Chinese-American experimental physicist who made significant contributions to nuclear ",
          "Christiane Nüsslein-Volhard - German biologist, won Nobel Prize in Physiology or Medicine ",
          "Claude Shannon - The father of information theory and founder of digital ",
          "Claudius Ptolemy - a Greco-Egyptian writer of Alexandria, known as a mathematician, ",
          "Cynthia Solomon - Pioneer in the fields of artificial intelligence, computer science ",
          "Cédric Villani - French mathematician, won Fields Medal, Fermat Prize and Poincaré ",
          "Dame Mary Lucy Cartwright - British mathematician who was one of the ",
          "Dame Stephanie \\"Steve\\" Shirley - Founded a software company in 1962 employing ",
          "Dame Susan Jocelyn Bell Burnell - Northern Irish astrophysicist who discovered radio ",
          "Daniel Lewin - Mathematician, Akamai co-founder, soldier, 9/11 victim-- Developed optimization techniques ",
          "David Lee Chaum - American computer scientist and cryptographer. Known for his ",
          "Dennis Ritchie - co-creator of UNIX and the C programming language. - ",
          "Dmitri Mendeleev - a chemist and inventor. He formulated the Periodic Law, ",
          "Donald Knuth - American computer scientist, author of \\"The Art of Computer ",
          "Donna Dubinsky - played an integral role in the development of personal ",
          "Dorothy Hodgkin was a British biochemist, credited with the development of protein ",
          "Dorothy Vaughan was a NASA mathematician and computer programmer on the SCOUT ",
          "Douglas Engelbart gave the mother of all demos: ",
          "Douglas R. Hofstadter is an American professor of cognitive science and author ",
          "Edsger Wybe Dijkstra was a Dutch computer scientist and mathematical scientist. ",
          "Elizabeth Blackwell - American doctor and first American woman to receive a ",
          "Elizabeth Helen Blackburn - Australian-American Nobel laureate; best known for co-discovering telomerase. ",
          "Emmett Brown invented time travel. https://en.wikipedia.org/wiki/Emmett_Brown (thanks Brian ",
          "Emmy Noether, German mathematician. Noether's Theorem is named after her. ",
          "Enrico Fermi invented the first nuclear reactor. ",
          "Erna Schneider Hoover revolutionized modern communication by inventing a computerized telephone switching ",
          "Esther Miriam Zimmer Lederberg - American microbiologist and a pioneer of bacterial ",
          "Euclid invented geometry. ",
          "Evelyn Boyd Granville - She was one of the first African-American woman ",
          "Florence Nightingale, more prominently known as a nurse, was also the first ",
          "Frances E. Allen, became the first female IBM Fellow in 1989. In ",
          "Frances Hugle, she was an American scientist, engineer, and inventor who contributed ",
          "Frances Spence - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Françoise Barré-Sinoussi - French virologist and Nobel Prize Laureate in Physiology or ",
          "Galileo was a founding father of modern astronomy, and faced politics and ",
          "Gertrude Elion - American biochemist, pharmacologist and the 1988 recipient of the ",
          "Gerty Theresa Cori - American biochemist who became the third woman—and first ",
          "Gordon Earle Moore - American engineer, Silicon Valley founding father, author of ",
          "Grace Hopper developed the first compiler for a computer programming language and  ",
          "Gregor Johann Mendel - Czech scientist and founder of genetics. ",
          "Grete Hermann was a German philosopher noted for her philosophical work on ",
          "Har Gobind Khorana - Indian-American biochemist who shared the 1968 Nobel Prize ",
          "Hedy Lamarr - Actress and inventor. The principles of her work are ",
          "Heinrich Rudolf Hertz - German physicist who first conclusively proved the existence ",
          "Helen Brooke Taussig - American cardiologist and founder of the field of ",
          "Henri Poincaré made fundamental contributions in several fields of mathematics. ",
          "Henrietta Swan Leavitt - she was an American astronomer who discovered the ",
          "Homi J Bhabha - was an Indian nuclear physicist, founding director, and ",
          "Horst Feistel - German-born American cryptographer who was one of the earliest ",
          "Hugh Beaver, British engineer, founder of the Guinness Book of World Records ",
          "Hypatia - Greek Alexandrine Neoplatonist philosopher in Egypt who was one of ",
          "Ian Murdock - founder of the Debian project - ",
          "Ida Rhodes - American pioneer in computer programming, designed the first computer ",
          "Inge Lehmann - Danish seismologist and geophysicist. Known for discovering in 1936 ",
          "Irène Joliot-Curie - French scientist who was awarded the Nobel Prize for ",
          "Isaac Newton invented classic mechanics and modern optics. ",
          "Ivan Edward Sutherland - American computer scientist and Internet pioneer, widely regarded ",
          "Jack Kilby invented silicone integrated circuits and gave Silicon Valley its name. ",
          "James Clerk Maxwell - Scottish physicist, best known for his formulation of ",
          "James Golick, all around ",
          "James Henry Ellis - British engineer and cryptographer employed by the GCHQ. ",
          "Jane Colden - American botanist widely considered the first female American botanist ",
          "Jane Goodall - British primatologist, ethologist, and anthropologist who is considered to ",
          "Janese Swanson (with others) developed the first of the Carmen Sandiego games. ",
          "Jaroslav Heyrovský was the inventor of the polarographic method, father of the ",
          "Jean Bartik, born Betty Jean Jennings, was one of the original programmers ",
          "Jean E. Sammet developed FORMAC, the first widely used computer language for ",
          "Jeannette Wing - co-developed the Liskov substitution principle. - ",
          "Joan Clarke - Bletchley Park code breaker during the Second World War ",
          "Joan Curran was a Welsh scientist who developed radar and invented chaff, ",
          "Johann Carl Friedrich Gauss - German mathematician who made significant contributions to ",
          "Johanna Mestorf - German prehistoric archaeologist and first female museum director in ",
          "Johannes Kepler, German astronomer known for his three laws of planetary motion ",
          "John Bardeen co-invented the transistor - ",
          "John Forbes Nash, Jr. - American mathematician who made fundamental contributions to ",
          "John McCarthy invented LISP: ",
          "John Napier of Merchiston - Scottish landowner known as an astronomer, mathematician ",
          "John von Neumann - todays computer architectures are based on the von ",
          "Julia Hall Bowman Robinson - American mathematician renowned for her contributions to ",
          "June Almeida - Scottish virologist who took the first pictures of the ",
          "Kadambini Ganguly - Indian physician, known for being the first South Asian ",
          "Karen Spärck Jones came up with the concept of inverse document frequency, ",
          "Karl Friedrich Benz - a German automobile engineer. Inventor of the first ",
          "Katherine Coleman Goble Johnson - American physicist and mathematician contributed to the ",
          "Katherine Louise Bouman is an imaging scientist and Assistant Professor of Computer ",
          "Kathleen Antonelli, American computer programmer and one of the six original programmers ",
          "Kathleen Booth, she's credited with writing the first assembly language. ",
          "Kay McNulty - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Ken Thompson - co-creator of UNIX and the C programming language - ",
          "Laura Bassi, the world's first female professor ",
          "Laura Poitras is a director and producer whose work, made possible by ",
          "Leonardo Da Vinci invented too many things to list here. ",
          "Leonhard Euler invented large parts of modern mathematics. ",
          "Leslie B. Lamport - American computer scientist. Lamport is best known for ",
          "Lina Solomonovna Stern (or Shtern; Russian: Лина Соломоновна Штерн; 26 August 1878 ",
          "Linda Brown Buck - American biologist and Nobel laureate best known for ",
          "Linus Torvalds invented Linux and Git. ",
          "Lise Meitner - Austrian/Swedish physicist who was involved in the discovery of ",
          "Lois Haibt - American computer scientist, part of the team at IBM ",
          "Louis Pasteur discovered vaccination, fermentation and pasteurization. ",
          "Lynn Margulis (b. Lynn Petra Alexander) - an American evolutionary theorist and ",
          "Mahavira - Ancient Indian mathematician during 9th century AD who discovered basic ",
          "Malcolm John Williamson - British mathematician and cryptographer employed by the GCHQ. ",
          "Malcolm McLean invented the modern shipping container: ",
          "Margaret Hamilton - Director of the Software Engineering Division of the MIT ",
          "Maria Ardinghelli - Italian translator, mathematician and physicist - ",
          "Maria Gaetana Agnesi - Italian mathematician, philosopher, theologian and humanitarian. She was ",
          "Maria Kirch - German astronomer and first woman to discover a comet ",
          "Maria Mayer - American theoretical physicist and Nobel laureate in Physics for ",
          "Marie Curie discovered radioactivity. ",
          "Marie Tharp - American geologist and oceanic cartographer who co-created the first ",
          "Marie-Jeanne de Lalande - French astronomer, mathematician and cataloguer of stars - ",
          "Marie-Sophie Germain - French mathematician, physicist and philosopher. Known for her work ",
          "Marlyn Wescoff - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Martin Edward Hellman - American cryptologist, best known for his invention of ",
          "Marvin Minsky - Pioneer in Artificial Intelligence, co-founder of the MIT's AI ",
          "Mary Jackson, American mathematician and aerospace engineer who earned the highest title ",
          "Mary Kenneth Keller, Sister Mary Kenneth Keller became the first American woman ",
          "Mary Leakey - British paleoanthropologist who discovered the first fossilized Proconsul skull ",
          "Mary Lou Jepsen, was the founder and chief technology officer of One ",
          "Maryam Mirzakhani - an Iranian mathematician and the first woman to win ",
          "May-Britt Moser - Nobel prize winner neuroscientist who contributed to the discovery ",
          "Meghnad Saha - Indian astrophysicist best known for his development of the ",
          "Michael Faraday - British scientist who contributed to the study of electromagnetism ",
          "Michael Stonebraker is a database research pioneer and architect of Ingres, Postgres, ",
          "Mildred Sanderson - American mathematician best known for Sanderson's theorem concerning modular ",
          "Mstislav Keldysh - a Soviet scientist in the field of mathematics and ",
          "Muhammad ibn Jābir al-Ḥarrānī al-Battānī was a founding father of astronomy. ",
          "Niels Bohr is the father of quantum theory. ",
          "Nikola Tesla invented the AC electric system and every gadget ever used ",
          "Nikolay Yegorovich Zhukovsky (Russian: Никола́й Его́рович Жуко́вский, January 17 1847 – March ",
          "Omar Khayyam - Persian mathematician, astronomer and poet. Known for his work ",
          "Pafnuty Chebyshev - Russian mathematician. He is known fo his works on ",
          "Panini - Ancient Indian linguist and grammarian from 4th century CE who ",
          "Paul Adrien Maurice Dirac - English theoretical physicist who made fundamental contributions ",
          "Pierre de Fermat pioneered several aspects of modern mathematics. ",
          "Poppy Northcutt. Poppy Northcutt was the first woman to work as part ",
          "Rachel Carson - American marine biologist and conservationist, her book Silent Spring ",
          "Radia Perlman is a software designer and network engineer and most famous ",
          "Ralph C. Merkle - American computer scientist, known for devising Merkle's puzzles ",
          "Richard Feynman was a key contributor to quantum mechanics and particle physics. ",
          "Richard Matthew Stallman - the founder of the Free Software movement, the ",
          "Rita Levi-Montalcini - Won Nobel Prize in Physiology or Medicine jointly with ",
          "Rob Pike was a key contributor to Unix, Plan 9, the X ",
          "Robert Noyce invented silicone integrated circuits and gave Silicon Valley its name. ",
          "Roberta Williams, did pioneering work in graphical adventure games for personal computers, ",
          "Rosalind Franklin - British biophysicist and X-ray crystallographer whose research was critical ",
          "Rosalyn Sussman Yalow - Rosalyn Sussman Yalow was an American medical physicist, ",
          "Ruth Lichterman - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Sally Kristen Ride was an American physicist and astronaut. She was the ",
          "Samuel Curran was an Irish physicist who worked alongside his wife during ",
          "Samuel Morse - contributed to the invention of a single-wire telegraph system ",
          "Satish Dhawan - Indian mathematician and aerospace engineer, known for leading the ",
          "Satoshi Nakamoto is the name used by the unknown person or group ",
          "Satyendra Nath Bose - He provided the foundation for Bose–Einstein statistics and ",
          "Sergey Alexeyevich Chaplygin (Russian: Серге́й Алексе́евич Чаплы́гин; April 5, 1869 – October ",
          "Sergey Petrovich Kapitsa (Russian: Серге́й Петро́вич Капи́ца; 14 February 1928 – 14 ",
          "Seymour Roger Cray was an American electrical engineer and supercomputer architect who ",
          "Shafi Goldwasser is a computer scientist known for creating theoretical foundations of ",
          "Sir Mokshagundam Visvesvaraya - is a notable Indian engineer.  He is a ",
          "Sophie Kowalevski - Russian mathematician responsible for important original contributions to analysis, ",
          "Sophie Wilson designed the first Acorn Micro-Computer and the instruction set for ",
          "Srinivasa Ramanujan - Indian mathematician and autodidact who made extraordinary contributions to ",
          "Stefan Banach - Polish mathematician, was one of the founders of modern ",
          "Stephen Hawking pioneered the field of cosmology by combining general relativity and ",
          "Stephen Jay Gould was was an American paleontologist, evolutionary biologist, and historian ",
          "Steve Wozniak invented the Apple I and Apple II. ",
          "Subrahmanyan Chandrasekhar - Astrophysicist known for his mathematical theory on different stages ",
          "Sue Black - British computer scientist and campaigner. She has been instrumental ",
          "Susan Kare, created the icons and many of the interface elements for ",
          "Sylvia B. Wilbur - British computer scientist who helped develop the ARPANET, ",
          "Taher A. ElGamal - Egyptian cryptographer best known for the ElGamal discrete ",
          "Tat’yana Avenirovna Proskuriakova (Russian: Татья́на Авени́ровна Проскуряко́ва) (January 23 [O.S. January 10] ",
          "Teruko Ishizaka - Japanese scientist and immunologist who co-discovered the antibody class ",
          "The Wright brothers, Orville and Wilbur - credited with inventing and building ",
          "This entry reflects a husband and wife team who worked ",
          "Thomas Alva Edison, prolific inventor ",
          "Valentina Tereshkova is a Russian engineer, cosmonaut and politician. She was the ",
          "Varahamihira - Ancient Indian mathematician who discovered trigonometric formulae during 505-587 CE ",
          "Vera Rubin - American astronomer who pioneered work on galaxy rotation rates. ",
          "Vinton Gray Cerf - American Internet pioneer, recognised as one of \\"the ",
          "Walter Houser Brattain co-invented the transistor - ",
          "Wanda Austin - Wanda Austin is the President and CEO of The ",
          "Werner Heisenberg was a founding father of quantum mechanics. ",
          "Wilhelm Conrad Röntgen - German physicist who was awarded the first Nobel ",
          "William Henry \\"Bill\\" Gates III is an American business magnate, philanthropist, investor, ",
          "William Shockley co-invented the transistor - ",
          "Yeong-Sil Jang was a Korean scientist and astronomer during the Joseon Dynasty; ",
          "Youyou Tu - Chinese pharmaceutical chemist and educator known for discovering artemisinin ",
          "Yukihiro Matsumoto - Japanese computer scientist and software programmer best known as ",
          "Yuri Alekseyevich Gagarin - Soviet pilot and cosmonaut, best known as the ",
          "admiring",
          "adoring",
          "affectionate",
          "agitated",
          "agnesi",
          "albattani",
          "allen",
          "almeida",
          "amazing",
          "angry",
          "antonelli",
          "archimedes",
          "ardinghelli",
          "aryabhata",
          "austin",
          "awesome",
          "babbage",
          "banach",
          "banzai",
          "bardeen",
          "bartik",
          "bassi",
          "beautiful",
          "beaver",
          "bell",
          "benz",
          "bhabha",
          "bhaskara",
          "black",
          "blackburn",
          "blackwell",
          "blissful",
          "bohr",
          "bold",
          "booth",
          "borg",
          "boring",
          "bose",
          "bouman",
          "boyd",
          "brahmagupta",
          "brattain",
          "brave",
          "brown",
          "buck",
          "burnell",
          "busy",
          "cannon",
          "carson",
          "cartwright",
          "cerf",
          "chandrasekhar",
          "chaplygin",
          "charming",
          "chatelet",
          "chatterjee",
          "chaum",
          "chebyshev",
          "clarke",
          "clever",
          "cocky",
          "cohen",
          "colden",
          "compassionate",
          "competent",
          "condescending",
          "confident",
          "cool",
          "cori",
          "cranky",
          "cray",
          "crazy",
          "curie",
          "curran",
          "darwin",
          "davinci",
          "dazzling",
          "determined",
          "dewdney",
          "dhawan",
          "diffie",
          "dijkstra",
          "dirac",
          "distracted",
          "dreamy",
          "driscoll",
          "dubinsky",
          "eager",
          "easley",
          "ecstatic",
          "edison",
          "einstein",
          "elastic",
          "elated",
          "elbakyan",
          "elegant",
          "elgamal",
          "elion",
          "ellis",
          "eloquent",
          "engelbart",
          "epic",
          "euclid",
          "euler",
          "exciting",
          "faraday",
          "feistel",
          "fermat",
          "fermi",
          "fervent",
          "festive",
          "feynman",
          "flamboyant",
          "focused",
          "franklin",
          "friendly",
          "frosty",
          "funny",
          "gagarin",
          "galileo",
          "gallant",
          "galois",
          "ganguly",
          "gates",
          "gauss",
          "germain",
          "gifted",
          "goldberg",
          "goldstine",
          "goldwasser",
          "golick",
          "goodall",
          "goofy",
          "gould",
          "gracious",
          "great",
          "greider",
          "grothendieck",
          "haibt",
          "hamilton",
          "happy",
          "hardcore",
          "haslett",
          "hawking",
          "heisenberg",
          "hellman",
          "hermann",
          "herschel",
          "hertz",
          "heuristic",
          "heyrovsky",
          "hodgkin",
          "hofstadter",
          "hoover",
          "hopeful",
          "hopper",
          "hugle",
          "hungry",
          "hypatia",
          "infallible",
          "inspiring",
          "intelligent",
          "interesting",
          "ishizaka",
          "jackson",
          "jang",
          "jennings",
          "jepsen",
          "johnson",
          "joliot",
          "jolly",
          "jones",
          "jovial",
          "kalam",
          "kapitsa",
          "kare",
          "keen",
          "keldysh",
          "keller",
          "kepler",
          "khayyam",
          "khorana",
          "kilby",
          "kind",
          "kirch",
          "knuth",
          "kowalevski",
          "lalande",
          "lamarr",
          "lamport",
          "laughing",
          "leakey",
          "leavitt",
          "lederberg",
          "lehmann",
          "lewin",
          "lichterman",
          "liskov",
          "lovelace",
          "loving",
          "lucid",
          "lumiere",
          "magical",
          "mahavira",
          "margulis",
          "matsumoto",
          "maxwell",
          "mayer",
          "mccarthy",
          "mcclintock",
          "mclaren",
          "mclean",
          "mcnulty",
          "meitner",
          "mendel",
          "mendeleev",
          "meninsky",
          "merkle",
          "mestorf",
          "minsky",
          "mirzakhani",
          "modest",
          "montalcini",
          "moore",
          "morse",
          "moser",
          "murdock",
          "musing",
          "mystifying",
          "napier",
          "nash",
          "naughty",
          "nervous",
          "neumann",
          "newton",
          "nice",
          "nifty",
          "nightingale",
          "nobel",
          "noether",
          "northcutt",
          "nostalgic",
          "noyce",
          "objective",
          "optimistic",
          "panini",
          "pare",
          "pascal",
          "pasteur",
          "payne",
          "peaceful",
          "pedantic",
          "pensive",
          "perlman",
          "pike",
          "poincare",
          "poitras",
          "practical",
          "priceless",
          "proskuriakova",
          "ptolemy",
          "quirky",
          "quizzical",
          "raman",
          "ramanujan",
          "recursing",
          "relaxed",
          "reverent",
          "rhodes",
          "ride",
          "ritchie",
          "robinson",
          "roentgen",
          "romantic",
          "rosalind",
          "rubin",
          "sad",
          "saha",
          "sammet",
          "sanderson",
          "satoshi",
          "serene",
          "shamir",
          "shannon",
          "sharp",
          "shaw",
          "shirley",
          "shockley",
          "shtern",
          "silly",
          "sinoussi",
          "sleepy",
          "snyder",
          "solomon",
          "spence",
          "stallman",
          "stoic",
          "stonebraker",
          "strange",
          "stupefied",
          "suspicious",
          "sutherland",
          "swanson",
          "swartz",
          "sweet",
          "swirles",
          "taussig",
          "tender",
          "tereshkova",
          "tesla",
          "tharp",
          "thirsty",
          "thompson",
          "torvalds",
          "trusting",
          "tu",
          "turing",
          "unruffled",
          "upbeat",
          "varahamihira",
          "vaughan",
          "vibrant",
          "vigilant",
          "vigorous",
          "villani",
          "visvesvaraya",
          "volhard",
          "wescoff",
          "wilbur",
          "wiles",
          "williams",
          "williamson",
          "wilson",
          "wing",
          "wizardly",
          "wonderful",
          "wozniak",
          "wright",
          "wu",
          "xenodochial",
          "yalow",
          "yonath",
          "youthful",
          "zealous",
          "zen",
          "zhukovsky",
          "Émilie du Châtelet - French natural philosopher, mathematician, physicist, and author during ",
          "Évariste Galois - French mathematician whose work laid the foundations of Galois ",
        ]
      }
      placeholder="Select a service…"
      required={true}
      setValue={[Function]}
      value="a"
    />
    <NameSelector
      label="Operation:"
      options={
        Array [
          "A. K. (Alexander Keewatin) Dewdney, Canadian mathematician, computer scientist, author and filmmaker. ",
          "A. P. J. Abdul Kalam - is an Indian scientist aka Missile ",
          "Aaron Swartz was influential in creating RSS, Markdown, Creative Commons, Reddit, and ",
          "Ada Lovelace invented the first algorithm. https://en.wikipedia.org/wiki/Ada_Lovelace (thanks James ",
          "Ada Yonath - an Israeli crystallographer, the first woman from the Middle ",
          "Adele Goldberg, was one of the designers and developers of the Smalltalk ",
          "Adele Goldstine, born Adele Katz, wrote the complete technical description for the ",
          "Adi Shamir - Israeli cryptographer whose numerous inventions and contributions to cryptography ",
          "Agnes Meyer Driscoll - American cryptanalyst during World Wars I and II ",
          "Alan Turing was a founding father of computer science. ",
          "Albert Einstein invented the general theory of relativity. ",
          "Alexander Graham Bell - an eminent Scottish-born scientist, inventor, engineer and innovator ",
          "Alexander Grothendieck - German-born French mathematician who became a leading figure in ",
          "Alexandra Asanovna Elbakyan (Russian: Алекса́ндра Аса́новна Элбакя́н) is a Kazakhstani graduate student, ",
          "Alfred Nobel - a Swedish chemist, engineer, innovator, and armaments manufacturer (inventor ",
          "Ambroise Pare invented modern surgery. ",
          "Andrew Wiles - Notable British mathematician who proved the enigmatic Fermat's Last ",
          "Anita Borg - Anita Borg was the founding director of the Institute ",
          "Anne Laura Dorinthea McLaren - British developmental biologist whose work helped lead ",
          "Annie Easley - She was a leading member of the team which ",
          "Annie Jump Cannon - pioneering female astronomer who classified hundreds of thousands ",
          "Archimedes was a physicist, engineer and mathematician who invented too many things ",
          "Aryabhata - Ancient Indian mathematician-astronomer during 476-550 CE ",
          "Asima Chatterjee was an Indian organic chemist noted for her research on ",
          "Auguste and Louis Lumière - the first filmmakers in history - ",
          "Bailey Whitfield Diffie - American cryptographer and one of the pioneers of ",
          "Barbara Liskov - co-developed the Liskov substitution principle. Liskov was also the ",
          "Barbara McClintock - a distinguished American cytogeneticist, 1983 Nobel Laureate in Physiology ",
          "Benjamin Franklin is famous for his experiments in electricity and the invention ",
          "Bertha Swirles was a theoretical physicist who made a number of contributions ",
          "Betty Jennings - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Betty Snyder - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Bhaskara II - Ancient Indian mathematician-astronomer whose work on calculus predates Newton ",
          "Blaise Pascal, French mathematician, physicist, and inventor - ",
          "Brahmagupta - Ancient Indian mathematician during 598-670 CE who gave rules to ",
          "Bram Cohen - American computer programmer and author of the BitTorrent peer-to-peer ",
          "Buckaroo Banzai and his mentor Dr. Hikita perfectd the \\"oscillation overthruster\\", a ",
          "C. V. Raman - Indian physicist who won the Nobel Prize in ",
          "Carla Meninsky, was the game designer and programmer for Atari 2600 games ",
          "Carol Shaw - Originally an Atari employee, Carol Shaw is said to ",
          "Caroline Harriet Haslett - English electrical engineer, electricity industry administrator and champion ",
          "Caroline Lucretia Herschel - German astronomer and discoverer of several comets. ",
          "Carolyn Widney Greider - American molecular biologist and joint winner of the ",
          "Cecilia Payne-Gaposchkin was an astronomer and astrophysicist who, in 1925, proposed in ",
          "Charles Babbage invented the concept of a programmable computer. ",
          "Charles Darwin established the principles of natural evolution. ",
          "Chien-Shiung Wu - Chinese-American experimental physicist who made significant contributions to nuclear ",
          "Christiane Nüsslein-Volhard - German biologist, won Nobel Prize in Physiology or Medicine ",
          "Claude Shannon - The father of information theory and founder of digital ",
          "Claudius Ptolemy - a Greco-Egyptian writer of Alexandria, known as a mathematician, ",
          "Cynthia Solomon - Pioneer in the fields of artificial intelligence, computer science ",
          "Cédric Villani - French mathematician, won Fields Medal, Fermat Prize and Poincaré ",
          "Dame Mary Lucy Cartwright - British mathematician who was one of the ",
          "Dame Stephanie \\"Steve\\" Shirley - Founded a software company in 1962 employing ",
          "Dame Susan Jocelyn Bell Burnell - Northern Irish astrophysicist who discovered radio ",
          "Daniel Lewin - Mathematician, Akamai co-founder, soldier, 9/11 victim-- Developed optimization techniques ",
          "David Lee Chaum - American computer scientist and cryptographer. Known for his ",
          "Dennis Ritchie - co-creator of UNIX and the C programming language. - ",
          "Dmitri Mendeleev - a chemist and inventor. He formulated the Periodic Law, ",
          "Donald Knuth - American computer scientist, author of \\"The Art of Computer ",
          "Donna Dubinsky - played an integral role in the development of personal ",
          "Dorothy Hodgkin was a British biochemist, credited with the development of protein ",
          "Dorothy Vaughan was a NASA mathematician and computer programmer on the SCOUT ",
          "Douglas Engelbart gave the mother of all demos: ",
          "Douglas R. Hofstadter is an American professor of cognitive science and author ",
          "Edsger Wybe Dijkstra was a Dutch computer scientist and mathematical scientist. ",
          "Elizabeth Blackwell - American doctor and first American woman to receive a ",
          "Elizabeth Helen Blackburn - Australian-American Nobel laureate; best known for co-discovering telomerase. ",
          "Emmett Brown invented time travel. https://en.wikipedia.org/wiki/Emmett_Brown (thanks Brian ",
          "Emmy Noether, German mathematician. Noether's Theorem is named after her. ",
          "Enrico Fermi invented the first nuclear reactor. ",
          "Erna Schneider Hoover revolutionized modern communication by inventing a computerized telephone switching ",
          "Esther Miriam Zimmer Lederberg - American microbiologist and a pioneer of bacterial ",
          "Euclid invented geometry. ",
          "Evelyn Boyd Granville - She was one of the first African-American woman ",
          "Florence Nightingale, more prominently known as a nurse, was also the first ",
          "Frances E. Allen, became the first female IBM Fellow in 1989. In ",
          "Frances Hugle, she was an American scientist, engineer, and inventor who contributed ",
          "Frances Spence - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Françoise Barré-Sinoussi - French virologist and Nobel Prize Laureate in Physiology or ",
          "Galileo was a founding father of modern astronomy, and faced politics and ",
          "Gertrude Elion - American biochemist, pharmacologist and the 1988 recipient of the ",
          "Gerty Theresa Cori - American biochemist who became the third woman—and first ",
          "Gordon Earle Moore - American engineer, Silicon Valley founding father, author of ",
          "Grace Hopper developed the first compiler for a computer programming language and  ",
          "Gregor Johann Mendel - Czech scientist and founder of genetics. ",
          "Grete Hermann was a German philosopher noted for her philosophical work on ",
          "Har Gobind Khorana - Indian-American biochemist who shared the 1968 Nobel Prize ",
          "Hedy Lamarr - Actress and inventor. The principles of her work are ",
          "Heinrich Rudolf Hertz - German physicist who first conclusively proved the existence ",
          "Helen Brooke Taussig - American cardiologist and founder of the field of ",
          "Henri Poincaré made fundamental contributions in several fields of mathematics. ",
          "Henrietta Swan Leavitt - she was an American astronomer who discovered the ",
          "Homi J Bhabha - was an Indian nuclear physicist, founding director, and ",
          "Horst Feistel - German-born American cryptographer who was one of the earliest ",
          "Hugh Beaver, British engineer, founder of the Guinness Book of World Records ",
          "Hypatia - Greek Alexandrine Neoplatonist philosopher in Egypt who was one of ",
          "Ian Murdock - founder of the Debian project - ",
          "Ida Rhodes - American pioneer in computer programming, designed the first computer ",
          "Inge Lehmann - Danish seismologist and geophysicist. Known for discovering in 1936 ",
          "Irène Joliot-Curie - French scientist who was awarded the Nobel Prize for ",
          "Isaac Newton invented classic mechanics and modern optics. ",
          "Ivan Edward Sutherland - American computer scientist and Internet pioneer, widely regarded ",
          "Jack Kilby invented silicone integrated circuits and gave Silicon Valley its name. ",
          "James Clerk Maxwell - Scottish physicist, best known for his formulation of ",
          "James Golick, all around ",
          "James Henry Ellis - British engineer and cryptographer employed by the GCHQ. ",
          "Jane Colden - American botanist widely considered the first female American botanist ",
          "Jane Goodall - British primatologist, ethologist, and anthropologist who is considered to ",
          "Janese Swanson (with others) developed the first of the Carmen Sandiego games. ",
          "Jaroslav Heyrovský was the inventor of the polarographic method, father of the ",
          "Jean Bartik, born Betty Jean Jennings, was one of the original programmers ",
          "Jean E. Sammet developed FORMAC, the first widely used computer language for ",
          "Jeannette Wing - co-developed the Liskov substitution principle. - ",
          "Joan Clarke - Bletchley Park code breaker during the Second World War ",
          "Joan Curran was a Welsh scientist who developed radar and invented chaff, ",
          "Johann Carl Friedrich Gauss - German mathematician who made significant contributions to ",
          "Johanna Mestorf - German prehistoric archaeologist and first female museum director in ",
          "Johannes Kepler, German astronomer known for his three laws of planetary motion ",
          "John Bardeen co-invented the transistor - ",
          "John Forbes Nash, Jr. - American mathematician who made fundamental contributions to ",
          "John McCarthy invented LISP: ",
          "John Napier of Merchiston - Scottish landowner known as an astronomer, mathematician ",
          "John von Neumann - todays computer architectures are based on the von ",
          "Julia Hall Bowman Robinson - American mathematician renowned for her contributions to ",
          "June Almeida - Scottish virologist who took the first pictures of the ",
          "Kadambini Ganguly - Indian physician, known for being the first South Asian ",
          "Karen Spärck Jones came up with the concept of inverse document frequency, ",
          "Karl Friedrich Benz - a German automobile engineer. Inventor of the first ",
          "Katherine Coleman Goble Johnson - American physicist and mathematician contributed to the ",
          "Katherine Louise Bouman is an imaging scientist and Assistant Professor of Computer ",
          "Kathleen Antonelli, American computer programmer and one of the six original programmers ",
          "Kathleen Booth, she's credited with writing the first assembly language. ",
          "Kay McNulty - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Ken Thompson - co-creator of UNIX and the C programming language - ",
          "Laura Bassi, the world's first female professor ",
          "Laura Poitras is a director and producer whose work, made possible by ",
          "Leonardo Da Vinci invented too many things to list here. ",
          "Leonhard Euler invented large parts of modern mathematics. ",
          "Leslie B. Lamport - American computer scientist. Lamport is best known for ",
          "Lina Solomonovna Stern (or Shtern; Russian: Лина Соломоновна Штерн; 26 August 1878 ",
          "Linda Brown Buck - American biologist and Nobel laureate best known for ",
          "Linus Torvalds invented Linux and Git. ",
          "Lise Meitner - Austrian/Swedish physicist who was involved in the discovery of ",
          "Lois Haibt - American computer scientist, part of the team at IBM ",
          "Louis Pasteur discovered vaccination, fermentation and pasteurization. ",
          "Lynn Margulis (b. Lynn Petra Alexander) - an American evolutionary theorist and ",
          "Mahavira - Ancient Indian mathematician during 9th century AD who discovered basic ",
          "Malcolm John Williamson - British mathematician and cryptographer employed by the GCHQ. ",
          "Malcolm McLean invented the modern shipping container: ",
          "Margaret Hamilton - Director of the Software Engineering Division of the MIT ",
          "Maria Ardinghelli - Italian translator, mathematician and physicist - ",
          "Maria Gaetana Agnesi - Italian mathematician, philosopher, theologian and humanitarian. She was ",
          "Maria Kirch - German astronomer and first woman to discover a comet ",
          "Maria Mayer - American theoretical physicist and Nobel laureate in Physics for ",
          "Marie Curie discovered radioactivity. ",
          "Marie Tharp - American geologist and oceanic cartographer who co-created the first ",
          "Marie-Jeanne de Lalande - French astronomer, mathematician and cataloguer of stars - ",
          "Marie-Sophie Germain - French mathematician, physicist and philosopher. Known for her work ",
          "Marlyn Wescoff - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Martin Edward Hellman - American cryptologist, best known for his invention of ",
          "Marvin Minsky - Pioneer in Artificial Intelligence, co-founder of the MIT's AI ",
          "Mary Jackson, American mathematician and aerospace engineer who earned the highest title ",
          "Mary Kenneth Keller, Sister Mary Kenneth Keller became the first American woman ",
          "Mary Leakey - British paleoanthropologist who discovered the first fossilized Proconsul skull ",
          "Mary Lou Jepsen, was the founder and chief technology officer of One ",
          "Maryam Mirzakhani - an Iranian mathematician and the first woman to win ",
          "May-Britt Moser - Nobel prize winner neuroscientist who contributed to the discovery ",
          "Meghnad Saha - Indian astrophysicist best known for his development of the ",
          "Michael Faraday - British scientist who contributed to the study of electromagnetism ",
          "Michael Stonebraker is a database research pioneer and architect of Ingres, Postgres, ",
          "Mildred Sanderson - American mathematician best known for Sanderson's theorem concerning modular ",
          "Mstislav Keldysh - a Soviet scientist in the field of mathematics and ",
          "Muhammad ibn Jābir al-Ḥarrānī al-Battānī was a founding father of astronomy. ",
          "Niels Bohr is the father of quantum theory. ",
          "Nikola Tesla invented the AC electric system and every gadget ever used ",
          "Nikolay Yegorovich Zhukovsky (Russian: Никола́й Его́рович Жуко́вский, January 17 1847 – March ",
          "Omar Khayyam - Persian mathematician, astronomer and poet. Known for his work ",
          "Pafnuty Chebyshev - Russian mathematician. He is known fo his works on ",
          "Panini - Ancient Indian linguist and grammarian from 4th century CE who ",
          "Paul Adrien Maurice Dirac - English theoretical physicist who made fundamental contributions ",
          "Pierre de Fermat pioneered several aspects of modern mathematics. ",
          "Poppy Northcutt. Poppy Northcutt was the first woman to work as part ",
          "Rachel Carson - American marine biologist and conservationist, her book Silent Spring ",
          "Radia Perlman is a software designer and network engineer and most famous ",
          "Ralph C. Merkle - American computer scientist, known for devising Merkle's puzzles ",
          "Richard Feynman was a key contributor to quantum mechanics and particle physics. ",
          "Richard Matthew Stallman - the founder of the Free Software movement, the ",
          "Rita Levi-Montalcini - Won Nobel Prize in Physiology or Medicine jointly with ",
          "Rob Pike was a key contributor to Unix, Plan 9, the X ",
          "Robert Noyce invented silicone integrated circuits and gave Silicon Valley its name. ",
          "Roberta Williams, did pioneering work in graphical adventure games for personal computers, ",
          "Rosalind Franklin - British biophysicist and X-ray crystallographer whose research was critical ",
          "Rosalyn Sussman Yalow - Rosalyn Sussman Yalow was an American medical physicist, ",
          "Ruth Lichterman - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Sally Kristen Ride was an American physicist and astronaut. She was the ",
          "Samuel Curran was an Irish physicist who worked alongside his wife during ",
          "Samuel Morse - contributed to the invention of a single-wire telegraph system ",
          "Satish Dhawan - Indian mathematician and aerospace engineer, known for leading the ",
          "Satoshi Nakamoto is the name used by the unknown person or group ",
          "Satyendra Nath Bose - He provided the foundation for Bose–Einstein statistics and ",
          "Sergey Alexeyevich Chaplygin (Russian: Серге́й Алексе́евич Чаплы́гин; April 5, 1869 – October ",
          "Sergey Petrovich Kapitsa (Russian: Серге́й Петро́вич Капи́ца; 14 February 1928 – 14 ",
          "Seymour Roger Cray was an American electrical engineer and supercomputer architect who ",
          "Shafi Goldwasser is a computer scientist known for creating theoretical foundations of ",
          "Sir Mokshagundam Visvesvaraya - is a notable Indian engineer.  He is a ",
          "Sophie Kowalevski - Russian mathematician responsible for important original contributions to analysis, ",
          "Sophie Wilson designed the first Acorn Micro-Computer and the instruction set for ",
          "Srinivasa Ramanujan - Indian mathematician and autodidact who made extraordinary contributions to ",
          "Stefan Banach - Polish mathematician, was one of the founders of modern ",
          "Stephen Hawking pioneered the field of cosmology by combining general relativity and ",
          "Stephen Jay Gould was was an American paleontologist, evolutionary biologist, and historian ",
          "Steve Wozniak invented the Apple I and Apple II. ",
          "Subrahmanyan Chandrasekhar - Astrophysicist known for his mathematical theory on different stages ",
          "Sue Black - British computer scientist and campaigner. She has been instrumental ",
          "Susan Kare, created the icons and many of the interface elements for ",
          "Sylvia B. Wilbur - British computer scientist who helped develop the ARPANET, ",
          "Taher A. ElGamal - Egyptian cryptographer best known for the ElGamal discrete ",
          "Tat’yana Avenirovna Proskuriakova (Russian: Татья́на Авени́ровна Проскуряко́ва) (January 23 [O.S. January 10] ",
          "Teruko Ishizaka - Japanese scientist and immunologist who co-discovered the antibody class ",
          "The Wright brothers, Orville and Wilbur - credited with inventing and building ",
          "This entry reflects a husband and wife team who worked ",
          "Thomas Alva Edison, prolific inventor ",
          "Valentina Tereshkova is a Russian engineer, cosmonaut and politician. She was the ",
          "Varahamihira - Ancient Indian mathematician who discovered trigonometric formulae during 505-587 CE ",
          "Vera Rubin - American astronomer who pioneered work on galaxy rotation rates. ",
          "Vinton Gray Cerf - American Internet pioneer, recognised as one of \\"the ",
          "Walter Houser Brattain co-invented the transistor - ",
          "Wanda Austin - Wanda Austin is the President and CEO of The ",
          "Werner Heisenberg was a founding father of quantum mechanics. ",
          "Wilhelm Conrad Röntgen - German physicist who was awarded the first Nobel ",
          "William Henry \\"Bill\\" Gates III is an American business magnate, philanthropist, investor, ",
          "William Shockley co-invented the transistor - ",
          "Yeong-Sil Jang was a Korean scientist and astronomer during the Joseon Dynasty; ",
          "Youyou Tu - Chinese pharmaceutical chemist and educator known for discovering artemisinin ",
          "Yukihiro Matsumoto - Japanese computer scientist and software programmer best known as ",
          "Yuri Alekseyevich Gagarin - Soviet pilot and cosmonaut, best known as the ",
          "admiring",
          "adoring",
          "affectionate",
          "agitated",
          "agnesi",
          "albattani",
          "allen",
          "almeida",
          "amazing",
          "angry",
          "antonelli",
          "archimedes",
          "ardinghelli",
          "aryabhata",
          "austin",
          "awesome",
          "babbage",
          "banach",
          "banzai",
          "bardeen",
          "bartik",
          "bassi",
          "beautiful",
          "beaver",
          "bell",
          "benz",
          "bhabha",
          "bhaskara",
          "black",
          "blackburn",
          "blackwell",
          "blissful",
          "bohr",
          "bold",
          "booth",
          "borg",
          "boring",
          "bose",
          "bouman",
          "boyd",
          "brahmagupta",
          "brattain",
          "brave",
          "brown",
          "buck",
          "burnell",
          "busy",
          "cannon",
          "carson",
          "cartwright",
          "cerf",
          "chandrasekhar",
          "chaplygin",
          "charming",
          "chatelet",
          "chatterjee",
          "chaum",
          "chebyshev",
          "clarke",
          "clever",
          "cocky",
          "cohen",
          "colden",
          "compassionate",
          "competent",
          "condescending",
          "confident",
          "cool",
          "cori",
          "cranky",
          "cray",
          "crazy",
          "curie",
          "curran",
          "darwin",
          "davinci",
          "dazzling",
          "determined",
          "dewdney",
          "dhawan",
          "diffie",
          "dijkstra",
          "dirac",
          "distracted",
          "dreamy",
          "driscoll",
          "dubinsky",
          "eager",
          "easley",
          "ecstatic",
          "edison",
          "einstein",
          "elastic",
          "elated",
          "elbakyan",
          "elegant",
          "elgamal",
          "elion",
          "ellis",
          "eloquent",
          "engelbart",
          "epic",
          "euclid",
          "euler",
          "exciting",
          "faraday",
          "feistel",
          "fermat",
          "fermi",
          "fervent",
          "festive",
          "feynman",
          "flamboyant",
          "focused",
          "franklin",
          "friendly",
          "frosty",
          "funny",
          "gagarin",
          "galileo",
          "gallant",
          "galois",
          "ganguly",
          "gates",
          "gauss",
          "germain",
          "gifted",
          "goldberg",
          "goldstine",
          "goldwasser",
          "golick",
          "goodall",
          "goofy",
          "gould",
          "gracious",
          "great",
          "greider",
          "grothendieck",
          "haibt",
          "hamilton",
          "happy",
          "hardcore",
          "haslett",
          "hawking",
          "heisenberg",
          "hellman",
          "hermann",
          "herschel",
          "hertz",
          "heuristic",
          "heyrovsky",
          "hodgkin",
          "hofstadter",
          "hoover",
          "hopeful",
          "hopper",
          "hugle",
          "hungry",
          "hypatia",
          "infallible",
          "inspiring",
          "intelligent",
          "interesting",
          "ishizaka",
          "jackson",
          "jang",
          "jennings",
          "jepsen",
          "johnson",
          "joliot",
          "jolly",
          "jones",
          "jovial",
          "kalam",
          "kapitsa",
          "kare",
          "keen",
          "keldysh",
          "keller",
          "kepler",
          "khayyam",
          "khorana",
          "kilby",
          "kind",
          "kirch",
          "knuth",
          "kowalevski",
          "lalande",
          "lamarr",
          "lamport",
          "laughing",
          "leakey",
          "leavitt",
          "lederberg",
          "lehmann",
          "lewin",
          "lichterman",
          "liskov",
          "lovelace",
          "loving",
          "lucid",
          "lumiere",
          "magical",
          "mahavira",
          "margulis",
          "matsumoto",
          "maxwell",
          "mayer",
          "mccarthy",
          "mcclintock",
          "mclaren",
          "mclean",
          "mcnulty",
          "meitner",
          "mendel",
          "mendeleev",
          "meninsky",
          "merkle",
          "mestorf",
          "minsky",
          "mirzakhani",
          "modest",
          "montalcini",
          "moore",
          "morse",
          "moser",
          "murdock",
          "musing",
          "mystifying",
          "napier",
          "nash",
          "naughty",
          "nervous",
          "neumann",
          "newton",
          "nice",
          "nifty",
          "nightingale",
          "nobel",
          "noether",
          "northcutt",
          "nostalgic",
          "noyce",
          "objective",
          "optimistic",
          "panini",
          "pare",
          "pascal",
          "pasteur",
          "payne",
          "peaceful",
          "pedantic",
          "pensive",
          "perlman",
          "pike",
          "poincare",
          "poitras",
          "practical",
          "priceless",
          "proskuriakova",
          "ptolemy",
          "quirky",
          "quizzical",
          "raman",
          "ramanujan",
          "recursing",
          "relaxed",
          "reverent",
          "rhodes",
          "ride",
          "ritchie",
          "robinson",
          "roentgen",
          "romantic",
          "rosalind",
          "rubin",
          "sad",
          "saha",
          "sammet",
          "sanderson",
          "satoshi",
          "serene",
          "shamir",
          "shannon",
          "sharp",
          "shaw",
          "shirley",
          "shockley",
          "shtern",
          "silly",
          "sinoussi",
          "sleepy",
          "snyder",
          "solomon",
          "spence",
          "stallman",
          "stoic",
          "stonebraker",
          "strange",
          "stupefied",
          "suspicious",
          "sutherland",
          "swanson",
          "swartz",
          "sweet",
          "swirles",
          "taussig",
          "tender",
          "tereshkova",
          "tesla",
          "tharp",
          "thirsty",
          "thompson",
          "torvalds",
          "trusting",
          "tu",
          "turing",
          "unruffled",
          "upbeat",
          "varahamihira",
          "vaughan",
          "vibrant",
          "vigilant",
          "vigorous",
          "villani",
          "visvesvaraya",
          "volhard",
          "wescoff",
          "wilbur",
          "wiles",
          "williams",
          "williamson",
          "wilson",
          "wing",
          "wizardly",
          "wonderful",
          "wozniak",
          "wright",
          "wu",
          "xenodochial",
          "yalow",
          "yonath",
          "youthful",
          "zealous",
          "zen",
          "zhukovsky",
          "Émilie du Châtelet - French natural philosopher, mathematician, physicist, and author during ",
          "Évariste Galois - French mathematician whose work laid the foundations of Galois ",
        ]
      }
      placeholder="Select an operation…"
      required={true}
      setValue={[Function]}
      value={null}
    />
  </div>
</header>
`;

exports[`<ListItem> renders without exploding 1`] = `
<header
  className="DdgHeader"
>
  <div
    className="DdgHeader--paramsHeader"
  >
    <NameSelector
      label="Service:"
      options={
        Array [
          "A. K. (Alexander Keewatin) Dewdney, Canadian mathematician, computer scientist, author and filmmaker. ",
          "A. P. J. Abdul Kalam - is an Indian scientist aka Missile ",
          "Aaron Swartz was influential in creating RSS, Markdown, Creative Commons, Reddit, and ",
          "Ada Lovelace invented the first algorithm. https://en.wikipedia.org/wiki/Ada_Lovelace (thanks James ",
          "Ada Yonath - an Israeli crystallographer, the first woman from the Middle ",
          "Adele Goldberg, was one of the designers and developers of the Smalltalk ",
          "Adele Goldstine, born Adele Katz, wrote the complete technical description for the ",
          "Adi Shamir - Israeli cryptographer whose numerous inventions and contributions to cryptography ",
          "Agnes Meyer Driscoll - American cryptanalyst during World Wars I and II ",
          "Alan Turing was a founding father of computer science. ",
          "Albert Einstein invented the general theory of relativity. ",
          "Alexander Graham Bell - an eminent Scottish-born scientist, inventor, engineer and innovator ",
          "Alexander Grothendieck - German-born French mathematician who became a leading figure in ",
          "Alexandra Asanovna Elbakyan (Russian: Алекса́ндра Аса́новна Элбакя́н) is a Kazakhstani graduate student, ",
          "Alfred Nobel - a Swedish chemist, engineer, innovator, and armaments manufacturer (inventor ",
          "Ambroise Pare invented modern surgery. ",
          "Andrew Wiles - Notable British mathematician who proved the enigmatic Fermat's Last ",
          "Anita Borg - Anita Borg was the founding director of the Institute ",
          "Anne Laura Dorinthea McLaren - British developmental biologist whose work helped lead ",
          "Annie Easley - She was a leading member of the team which ",
          "Annie Jump Cannon - pioneering female astronomer who classified hundreds of thousands ",
          "Archimedes was a physicist, engineer and mathematician who invented too many things ",
          "Aryabhata - Ancient Indian mathematician-astronomer during 476-550 CE ",
          "Asima Chatterjee was an Indian organic chemist noted for her research on ",
          "Auguste and Louis Lumière - the first filmmakers in history - ",
          "Bailey Whitfield Diffie - American cryptographer and one of the pioneers of ",
          "Barbara Liskov - co-developed the Liskov substitution principle. Liskov was also the ",
          "Barbara McClintock - a distinguished American cytogeneticist, 1983 Nobel Laureate in Physiology ",
          "Benjamin Franklin is famous for his experiments in electricity and the invention ",
          "Bertha Swirles was a theoretical physicist who made a number of contributions ",
          "Betty Jennings - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Betty Snyder - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Bhaskara II - Ancient Indian mathematician-astronomer whose work on calculus predates Newton ",
          "Blaise Pascal, French mathematician, physicist, and inventor - ",
          "Brahmagupta - Ancient Indian mathematician during 598-670 CE who gave rules to ",
          "Bram Cohen - American computer programmer and author of the BitTorrent peer-to-peer ",
          "Buckaroo Banzai and his mentor Dr. Hikita perfectd the \\"oscillation overthruster\\", a ",
          "C. V. Raman - Indian physicist who won the Nobel Prize in ",
          "Carla Meninsky, was the game designer and programmer for Atari 2600 games ",
          "Carol Shaw - Originally an Atari employee, Carol Shaw is said to ",
          "Caroline Harriet Haslett - English electrical engineer, electricity industry administrator and champion ",
          "Caroline Lucretia Herschel - German astronomer and discoverer of several comets. ",
          "Carolyn Widney Greider - American molecular biologist and joint winner of the ",
          "Cecilia Payne-Gaposchkin was an astronomer and astrophysicist who, in 1925, proposed in ",
          "Charles Babbage invented the concept of a programmable computer. ",
          "Charles Darwin established the principles of natural evolution. ",
          "Chien-Shiung Wu - Chinese-American experimental physicist who made significant contributions to nuclear ",
          "Christiane Nüsslein-Volhard - German biologist, won Nobel Prize in Physiology or Medicine ",
          "Claude Shannon - The father of information theory and founder of digital ",
          "Claudius Ptolemy - a Greco-Egyptian writer of Alexandria, known as a mathematician, ",
          "Cynthia Solomon - Pioneer in the fields of artificial intelligence, computer science ",
          "Cédric Villani - French mathematician, won Fields Medal, Fermat Prize and Poincaré ",
          "Dame Mary Lucy Cartwright - British mathematician who was one of the ",
          "Dame Stephanie \\"Steve\\" Shirley - Founded a software company in 1962 employing ",
          "Dame Susan Jocelyn Bell Burnell - Northern Irish astrophysicist who discovered radio ",
          "Daniel Lewin - Mathematician, Akamai co-founder, soldier, 9/11 victim-- Developed optimization techniques ",
          "David Lee Chaum - American computer scientist and cryptographer. Known for his ",
          "Dennis Ritchie - co-creator of UNIX and the C programming language. - ",
          "Dmitri Mendeleev - a chemist and inventor. He formulated the Periodic Law, ",
          "Donald Knuth - American computer scientist, author of \\"The Art of Computer ",
          "Donna Dubinsky - played an integral role in the development of personal ",
          "Dorothy Hodgkin was a British biochemist, credited with the development of protein ",
          "Dorothy Vaughan was a NASA mathematician and computer programmer on the SCOUT ",
          "Douglas Engelbart gave the mother of all demos: ",
          "Douglas R. Hofstadter is an American professor of cognitive science and author ",
          "Edsger Wybe Dijkstra was a Dutch computer scientist and mathematical scientist. ",
          "Elizabeth Blackwell - American doctor and first American woman to receive a ",
          "Elizabeth Helen Blackburn - Australian-American Nobel laureate; best known for co-discovering telomerase. ",
          "Emmett Brown invented time travel. https://en.wikipedia.org/wiki/Emmett_Brown (thanks Brian ",
          "Emmy Noether, German mathematician. Noether's Theorem is named after her. ",
          "Enrico Fermi invented the first nuclear reactor. ",
          "Erna Schneider Hoover revolutionized modern communication by inventing a computerized telephone switching ",
          "Esther Miriam Zimmer Lederberg - American microbiologist and a pioneer of bacterial ",
          "Euclid invented geometry. ",
          "Evelyn Boyd Granville - She was one of the first African-American woman ",
          "Florence Nightingale, more prominently known as a nurse, was also the first ",
          "Frances E. Allen, became the first female IBM Fellow in 1989. In ",
          "Frances Hugle, she was an American scientist, engineer, and inventor who contributed ",
          "Frances Spence - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Françoise Barré-Sinoussi - French virologist and Nobel Prize Laureate in Physiology or ",
          "Galileo was a founding father of modern astronomy, and faced politics and ",
          "Gertrude Elion - American biochemist, pharmacologist and the 1988 recipient of the ",
          "Gerty Theresa Cori - American biochemist who became the third woman—and first ",
          "Gordon Earle Moore - American engineer, Silicon Valley founding father, author of ",
          "Grace Hopper developed the first compiler for a computer programming language and  ",
          "Gregor Johann Mendel - Czech scientist and founder of genetics. ",
          "Grete Hermann was a German philosopher noted for her philosophical work on ",
          "Har Gobind Khorana - Indian-American biochemist who shared the 1968 Nobel Prize ",
          "Hedy Lamarr - Actress and inventor. The principles of her work are ",
          "Heinrich Rudolf Hertz - German physicist who first conclusively proved the existence ",
          "Helen Brooke Taussig - American cardiologist and founder of the field of ",
          "Henri Poincaré made fundamental contributions in several fields of mathematics. ",
          "Henrietta Swan Leavitt - she was an American astronomer who discovered the ",
          "Homi J Bhabha - was an Indian nuclear physicist, founding director, and ",
          "Horst Feistel - German-born American cryptographer who was one of the earliest ",
          "Hugh Beaver, British engineer, founder of the Guinness Book of World Records ",
          "Hypatia - Greek Alexandrine Neoplatonist philosopher in Egypt who was one of ",
          "Ian Murdock - founder of the Debian project - ",
          "Ida Rhodes - American pioneer in computer programming, designed the first computer ",
          "Inge Lehmann - Danish seismologist and geophysicist. Known for discovering in 1936 ",
          "Irène Joliot-Curie - French scientist who was awarded the Nobel Prize for ",
          "Isaac Newton invented classic mechanics and modern optics. ",
          "Ivan Edward Sutherland - American computer scientist and Internet pioneer, widely regarded ",
          "Jack Kilby invented silicone integrated circuits and gave Silicon Valley its name. ",
          "James Clerk Maxwell - Scottish physicist, best known for his formulation of ",
          "James Golick, all around ",
          "James Henry Ellis - British engineer and cryptographer employed by the GCHQ. ",
          "Jane Colden - American botanist widely considered the first female American botanist ",
          "Jane Goodall - British primatologist, ethologist, and anthropologist who is considered to ",
          "Janese Swanson (with others) developed the first of the Carmen Sandiego games. ",
          "Jaroslav Heyrovský was the inventor of the polarographic method, father of the ",
          "Jean Bartik, born Betty Jean Jennings, was one of the original programmers ",
          "Jean E. Sammet developed FORMAC, the first widely used computer language for ",
          "Jeannette Wing - co-developed the Liskov substitution principle. - ",
          "Joan Clarke - Bletchley Park code breaker during the Second World War ",
          "Joan Curran was a Welsh scientist who developed radar and invented chaff, ",
          "Johann Carl Friedrich Gauss - German mathematician who made significant contributions to ",
          "Johanna Mestorf - German prehistoric archaeologist and first female museum director in ",
          "Johannes Kepler, German astronomer known for his three laws of planetary motion ",
          "John Bardeen co-invented the transistor - ",
          "John Forbes Nash, Jr. - American mathematician who made fundamental contributions to ",
          "John McCarthy invented LISP: ",
          "John Napier of Merchiston - Scottish landowner known as an astronomer, mathematician ",
          "John von Neumann - todays computer architectures are based on the von ",
          "Julia Hall Bowman Robinson - American mathematician renowned for her contributions to ",
          "June Almeida - Scottish virologist who took the first pictures of the ",
          "Kadambini Ganguly - Indian physician, known for being the first South Asian ",
          "Karen Spärck Jones came up with the concept of inverse document frequency, ",
          "Karl Friedrich Benz - a German automobile engineer. Inventor of the first ",
          "Katherine Coleman Goble Johnson - American physicist and mathematician contributed to the ",
          "Katherine Louise Bouman is an imaging scientist and Assistant Professor of Computer ",
          "Kathleen Antonelli, American computer programmer and one of the six original programmers ",
          "Kathleen Booth, she's credited with writing the first assembly language. ",
          "Kay McNulty - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Ken Thompson - co-creator of UNIX and the C programming language - ",
          "Laura Bassi, the world's first female professor ",
          "Laura Poitras is a director and producer whose work, made possible by ",
          "Leonardo Da Vinci invented too many things to list here. ",
          "Leonhard Euler invented large parts of modern mathematics. ",
          "Leslie B. Lamport - American computer scientist. Lamport is best known for ",
          "Lina Solomonovna Stern (or Shtern; Russian: Лина Соломоновна Штерн; 26 August 1878 ",
          "Linda Brown Buck - American biologist and Nobel laureate best known for ",
          "Linus Torvalds invented Linux and Git. ",
          "Lise Meitner - Austrian/Swedish physicist who was involved in the discovery of ",
          "Lois Haibt - American computer scientist, part of the team at IBM ",
          "Louis Pasteur discovered vaccination, fermentation and pasteurization. ",
          "Lynn Margulis (b. Lynn Petra Alexander) - an American evolutionary theorist and ",
          "Mahavira - Ancient Indian mathematician during 9th century AD who discovered basic ",
          "Malcolm John Williamson - British mathematician and cryptographer employed by the GCHQ. ",
          "Malcolm McLean invented the modern shipping container: ",
          "Margaret Hamilton - Director of the Software Engineering Division of the MIT ",
          "Maria Ardinghelli - Italian translator, mathematician and physicist - ",
          "Maria Gaetana Agnesi - Italian mathematician, philosopher, theologian and humanitarian. She was ",
          "Maria Kirch - German astronomer and first woman to discover a comet ",
          "Maria Mayer - American theoretical physicist and Nobel laureate in Physics for ",
          "Marie Curie discovered radioactivity. ",
          "Marie Tharp - American geologist and oceanic cartographer who co-created the first ",
          "Marie-Jeanne de Lalande - French astronomer, mathematician and cataloguer of stars - ",
          "Marie-Sophie Germain - French mathematician, physicist and philosopher. Known for her work ",
          "Marlyn Wescoff - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Martin Edward Hellman - American cryptologist, best known for his invention of ",
          "Marvin Minsky - Pioneer in Artificial Intelligence, co-founder of the MIT's AI ",
          "Mary Jackson, American mathematician and aerospace engineer who earned the highest title ",
          "Mary Kenneth Keller, Sister Mary Kenneth Keller became the first American woman ",
          "Mary Leakey - British paleoanthropologist who discovered the first fossilized Proconsul skull ",
          "Mary Lou Jepsen, was the founder and chief technology officer of One ",
          "Maryam Mirzakhani - an Iranian mathematician and the first woman to win ",
          "May-Britt Moser - Nobel prize winner neuroscientist who contributed to the discovery ",
          "Meghnad Saha - Indian astrophysicist best known for his development of the ",
          "Michael Faraday - British scientist who contributed to the study of electromagnetism ",
          "Michael Stonebraker is a database research pioneer and architect of Ingres, Postgres, ",
          "Mildred Sanderson - American mathematician best known for Sanderson's theorem concerning modular ",
          "Mstislav Keldysh - a Soviet scientist in the field of mathematics and ",
          "Muhammad ibn Jābir al-Ḥarrānī al-Battānī was a founding father of astronomy. ",
          "Niels Bohr is the father of quantum theory. ",
          "Nikola Tesla invented the AC electric system and every gadget ever used ",
          "Nikolay Yegorovich Zhukovsky (Russian: Никола́й Его́рович Жуко́вский, January 17 1847 – March ",
          "Omar Khayyam - Persian mathematician, astronomer and poet. Known for his work ",
          "Pafnuty Chebyshev - Russian mathematician. He is known fo his works on ",
          "Panini - Ancient Indian linguist and grammarian from 4th century CE who ",
          "Paul Adrien Maurice Dirac - English theoretical physicist who made fundamental contributions ",
          "Pierre de Fermat pioneered several aspects of modern mathematics. ",
          "Poppy Northcutt. Poppy Northcutt was the first woman to work as part ",
          "Rachel Carson - American marine biologist and conservationist, her book Silent Spring ",
          "Radia Perlman is a software designer and network engineer and most famous ",
          "Ralph C. Merkle - American computer scientist, known for devising Merkle's puzzles ",
          "Richard Feynman was a key contributor to quantum mechanics and particle physics. ",
          "Richard Matthew Stallman - the founder of the Free Software movement, the ",
          "Rita Levi-Montalcini - Won Nobel Prize in Physiology or Medicine jointly with ",
          "Rob Pike was a key contributor to Unix, Plan 9, the X ",
          "Robert Noyce invented silicone integrated circuits and gave Silicon Valley its name. ",
          "Roberta Williams, did pioneering work in graphical adventure games for personal computers, ",
          "Rosalind Franklin - British biophysicist and X-ray crystallographer whose research was critical ",
          "Rosalyn Sussman Yalow - Rosalyn Sussman Yalow was an American medical physicist, ",
          "Ruth Lichterman - one of the original programmers of the ENIAC. https://en.wikipedia.org/wiki/ENIAC ",
          "Sally Kristen Ride was an American physicist and astronaut. She was the ",
          "Samuel Curran was an Irish physicist who worked alongside his wife during ",
          "Samuel Morse - contributed to the invention of a single-wire telegraph system ",
          "Satish Dhawan - Indian mathematician and aerospace engineer, known for leading the ",
          "Satoshi Nakamoto is the name used by the unknown person or group ",
          "Satyendra Nath Bose - He provided the foundation for Bose–Einstein statistics and ",
          "Sergey Alexeyevich Chaplygin (Russian: Серге́й Алексе́евич Чаплы́гин; April 5, 1869 – October ",
          "Sergey Petrovich Kapitsa (Russian: Серге́й Петро́вич Капи́ца; 14 February 1928 – 14 ",
          "Seymour Roger Cray was an American electrical engineer and supercomputer architect who ",
          "Shafi Goldwasser is a computer scientist known for creating theoretical foundations of ",
          "Sir Mokshagundam Visvesvaraya - is a notable Indian engineer.  He is a ",
          "Sophie Kowalevski - Russian mathematician responsible for important original contributions to analysis, ",
          "Sophie Wilson designed the first Acorn Micro-Computer and the instruction set for ",
          "Srinivasa Ramanujan - Indian mathematician and autodidact who made extraordinary contributions to ",
          "Stefan Banach - Polish mathematician, was one of the founders of modern ",
          "Stephen Hawking pioneered the field of cosmology by combining general relativity and ",
          "Stephen Jay Gould was was an American paleontologist, evolutionary biologist, and historian ",
          "Steve Wozniak invented the Apple I and Apple II. ",
          "Subrahmanyan Chandrasekhar - Astrophysicist known for his mathematical theory on different stages ",
          "Sue Black - British computer scientist and campaigner. She has been instrumental ",
          "Susan Kare, created the icons and many of the interface elements for ",
          "Sylvia B. Wilbur - British computer scientist who helped develop the ARPANET, ",
          "Taher A. ElGamal - Egyptian cryptographer best known for the ElGamal discrete ",
          "Tat’yana Avenirovna Proskuriakova (Russian: Татья́на Авени́ровна Проскуряко́ва) (January 23 [O.S. January 10] ",
          "Teruko Ishizaka - Japanese scientist and immunologist who co-discovered the antibody class ",
          "The Wright brothers, Orville and Wilbur - credited with inventing and building ",
          "This entry reflects a husband and wife team who worked ",
          "Thomas Alva Edison, prolific inventor ",
          "Valentina Tereshkova is a Russian engineer, cosmonaut and politician. She was the ",
          "Varahamihira - Ancient Indian mathematician who discovered trigonometric formulae during 505-587 CE ",
          "Vera Rubin - American astronomer who pioneered work on galaxy rotation rates. ",
          "Vinton Gray Cerf - American Internet pioneer, recognised as one of \\"the ",
          "Walter Houser Brattain co-invented the transistor - ",
          "Wanda Austin - Wanda Austin is the President and CEO of The ",
          "Werner Heisenberg was a founding father of quantum mechanics. ",
          "Wilhelm Conrad Röntgen - German physicist who was awarded the first Nobel ",
          "William Henry \\"Bill\\" Gates III is an American business magnate, philanthropist, investor, ",
          "William Shockley co-invented the transistor - ",
          "Yeong-Sil Jang was a Korean scientist and astronomer during the Joseon Dynasty; ",
          "Youyou Tu - Chinese pharmaceutical chemist and educator known for discovering artemisinin ",
          "Yukihiro Matsumoto - Japanese computer scientist and software programmer best known as ",
          "Yuri Alekseyevich Gagarin - Soviet pilot and cosmonaut, best known as the ",
          "admiring",
          "adoring",
          "affectionate",
          "agitated",
          "agnesi",
          "albattani",
          "allen",
          "almeida",
          "amazing",
          "angry",
          "antonelli",
          "archimedes",
          "ardinghelli",
          "aryabhata",
          "austin",
          "awesome",
          "babbage",
          "banach",
          "banzai",
          "bardeen",
          "bartik",
          "bassi",
          "beautiful",
          "beaver",
          "bell",
          "benz",
          "bhabha",
          "bhaskara",
          "black",
          "blackburn",
          "blackwell",
          "blissful",
          "bohr",
          "bold",
          "booth",
          "borg",
          "boring",
          "bose",
          "bouman",
          "boyd",
          "brahmagupta",
          "brattain",
          "brave",
          "brown",
          "buck",
          "burnell",
          "busy",
          "cannon",
          "carson",
          "cartwright",
          "cerf",
          "chandrasekhar",
          "chaplygin",
          "charming",
          "chatelet",
          "chatterjee",
          "chaum",
          "chebyshev",
          "clarke",
          "clever",
          "cocky",
          "cohen",
          "colden",
          "compassionate",
          "competent",
          "condescending",
          "confident",
          "cool",
          "cori",
          "cranky",
          "cray",
          "crazy",
          "curie",
          "curran",
          "darwin",
          "davinci",
          "dazzling",
          "determined",
          "dewdney",
          "dhawan",
          "diffie",
          "dijkstra",
          "dirac",
          "distracted",
          "dreamy",
          "driscoll",
          "dubinsky",
          "eager",
          "easley",
          "ecstatic",
          "edison",
          "einstein",
          "elastic",
          "elated",
          "elbakyan",
          "elegant",
          "elgamal",
          "elion",
          "ellis",
          "eloquent",
          "engelbart",
          "epic",
          "euclid",
          "euler",
          "exciting",
          "faraday",
          "feistel",
          "fermat",
          "fermi",
          "fervent",
          "festive",
          "feynman",
          "flamboyant",
          "focused",
          "franklin",
          "friendly",
          "frosty",
          "funny",
          "gagarin",
          "galileo",
          "gallant",
          "galois",
          "ganguly",
          "gates",
          "gauss",
          "germain",
          "gifted",
          "goldberg",
          "goldstine",
          "goldwasser",
          "golick",
          "goodall",
          "goofy",
          "gould",
          "gracious",
          "great",
          "greider",
          "grothendieck",
          "haibt",
          "hamilton",
          "happy",
          "hardcore",
          "haslett",
          "hawking",
          "heisenberg",
          "hellman",
          "hermann",
          "herschel",
          "hertz",
          "heuristic",
          "heyrovsky",
          "hodgkin",
          "hofstadter",
          "hoover",
          "hopeful",
          "hopper",
          "hugle",
          "hungry",
          "hypatia",
          "infallible",
          "inspiring",
          "intelligent",
          "interesting",
          "ishizaka",
          "jackson",
          "jang",
          "jennings",
          "jepsen",
          "johnson",
          "joliot",
          "jolly",
          "jones",
          "jovial",
          "kalam",
          "kapitsa",
          "kare",
          "keen",
          "keldysh",
          "keller",
          "kepler",
          "khayyam",
          "khorana",
          "kilby",
          "kind",
          "kirch",
          "knuth",
          "kowalevski",
          "lalande",
          "lamarr",
          "lamport",
          "laughing",
          "leakey",
          "leavitt",
          "lederberg",
          "lehmann",
          "lewin",
          "lichterman",
          "liskov",
          "lovelace",
          "loving",
          "lucid",
          "lumiere",
          "magical",
          "mahavira",
          "margulis",
          "matsumoto",
          "maxwell",
          "mayer",
          "mccarthy",
          "mcclintock",
          "mclaren",
          "mclean",
          "mcnulty",
          "meitner",
          "mendel",
          "mendeleev",
          "meninsky",
          "merkle",
          "mestorf",
          "minsky",
          "mirzakhani",
          "modest",
          "montalcini",
          "moore",
          "morse",
          "moser",
          "murdock",
          "musing",
          "mystifying",
          "napier",
          "nash",
          "naughty",
          "nervous",
          "neumann",
          "newton",
          "nice",
          "nifty",
          "nightingale",
          "nobel",
          "noether",
          "northcutt",
          "nostalgic",
          "noyce",
          "objective",
          "optimistic",
          "panini",
          "pare",
          "pascal",
          "pasteur",
          "payne",
          "peaceful",
          "pedantic",
          "pensive",
          "perlman",
          "pike",
          "poincare",
          "poitras",
          "practical",
          "priceless",
          "proskuriakova",
          "ptolemy",
          "quirky",
          "quizzical",
          "raman",
          "ramanujan",
          "recursing",
          "relaxed",
          "reverent",
          "rhodes",
          "ride",
          "ritchie",
          "robinson",
          "roentgen",
          "romantic",
          "rosalind",
          "rubin",
          "sad",
          "saha",
          "sammet",
          "sanderson",
          "satoshi",
          "serene",
          "shamir",
          "shannon",
          "sharp",
          "shaw",
          "shirley",
          "shockley",
          "shtern",
          "silly",
          "sinoussi",
          "sleepy",
          "snyder",
          "solomon",
          "spence",
          "stallman",
          "stoic",
          "stonebraker",
          "strange",
          "stupefied",
          "suspicious",
          "sutherland",
          "swanson",
          "swartz",
          "sweet",
          "swirles",
          "taussig",
          "tender",
          "tereshkova",
          "tesla",
          "tharp",
          "thirsty",
          "thompson",
          "torvalds",
          "trusting",
          "tu",
          "turing",
          "unruffled",
          "upbeat",
          "varahamihira",
          "vaughan",
          "vibrant",
          "vigilant",
          "vigorous",
          "villani",
          "visvesvaraya",
          "volhard",
          "wescoff",
          "wilbur",
          "wiles",
          "williams",
          "williamson",
          "wilson",
          "wing",
          "wizardly",
          "wonderful",
          "wozniak",
          "wright",
          "wu",
          "xenodochial",
          "yalow",
          "yonath",
          "youthful",
          "zealous",
          "zen",
          "zhukovsky",
          "Émilie du Châtelet - French natural philosopher, mathematician, physicist, and author during ",
          "Évariste Galois - French mathematician whose work laid the foundations of Galois ",
        ]
      }
      placeholder="Select a service…"
      required={true}
      setValue={[Function]}
      value={null}
    />
  </div>
</header>
`;
